package com.sep490.slms2026.entity;

import jakarta.persistence.*;
import lombok.*;

import java.time.LocalDateTime;

@Entity
@Table(name = "equipment_maintenance_histories")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class EquipmentMaintenanceHistory {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "equipment_id", nullable = false)
    private Equipment equipment;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "maintenance_request_id", nullable = false)
    private MaintenanceRequest maintenanceRequest;

    private LocalDateTime maintenanceDate;

    @Column(name = "repair_cost")
    private Long repairCost;

    @Column(columnDefinition = "TEXT")
    private String note;

    /** CSV URL ảnh lần bảo trì (BEFORE/AFTER/INVOICE). */
    @Column(name = "photo_urls", columnDefinition = "TEXT")
    private String photoUrls;
}